--- a/projekt-20-literatura-bibliography.bib
+++ b/projekt-20-literatura-bibliography.bib
@@ -1,21 +1,3 @@
-@inproceedings{FuseOrNotToFuse,
-	author		= "Vangoor, Bharath Kumar Reddy and Tarasov, Vasily and Zadok, Erez",
-	booktitle	= "15th USENIX Conference on File and Storage Technologies (FAST 17)", 
-	title		= "To FUSE or Not to FUSE: Performance of User-Space File Systems", 
-	year		= "2017",
-	pages		= "59-72",
-	url 		= "https://www.usenix.org/conference/fast17/technical-sessions/presentation/vangoor"
-}
-
-@inproceedings{HardeningFUSE,
-	author		= "Burihabwa, Dorian and Felber, Pascal and Mercier, Hugues and Schiavoni, Valerio",
-	booktitle	= "2018 IEEE International Conference on Cloud Computing Technology and Science (CloudCom)", 
-	title		= "SGX-FS: Hardening a File System in User-Space with Intel SGX", 
-	year		= "2018",
-	pages		= "67-72",
-	url 		= "https://ieeexplore.ieee.org/document/8590996"
-}
-
 @article{CloudStorageComparison,
 	author 	= "Bocchi, Enrico and Drago, Idilio and Mellia, Marco",
 	journal = "IEEE Transactions on Cloud Computing",
@@ -26,52 +8,6 @@
 	pages 	= "751-764",
 	doi 	= "10.1109/TCC.2015.2427191",
 	url 	= "https://ieeexplore.ieee.org/abstract/document/7096995"
-}
-
-@inproceedings{HTTP3,
-	author 	= "Carlucci, Gaetano and De Cicco, Luca and Mascolo, Saverio",
-	booktitle = "Proceedings of the 30th Annual ACM Symposium on Applied Computing",
-	title = "HTTP over UDP: An Experimental Investigation of QUIC",
-	year = "2015",
-	isbn = "9781450331968",
-	publisher = "Association for Computing Machinery",	
-	url = "https://doi.org/10.1145/2695664.2695706",
-	doi = "10.1145/2695664.2695706",	
-	pages = "609–614"
-}
-
-@webpage{xdg,
-	key 			= "xdg",
-	title 			= "xdg-utils",
-	howpublished	= "online",
-	year 			= "2019",
-	url 			= "https://freedesktop.org/wiki/Software/xdg-utils/",
-	publisher		= "freedesktop.org",
-	cited 			= "2021-04-20"
-}
-
-@MISC{RFC7231,
-  author 		= "Fielding, Roy and Reschke, Julian",
-  title 		= "Hypertext Transfer Protocol (HTTP/1.1): Semantics and Content",
-  howpublished 	= "Requests for Comments",  
-  year 			= "2014",
-  month			= "6",  
-  doi 			= "10.17487/RFC7231",
-  publisher 	= "RFC Editor",  
-  url 			= "https://www.rfc-editor.org/info/rfc7231",
-  cited 		= "2021-04-25"
-}
-
-@webpage{keyring,
-	key 			= "keyring",
-	title 			= "What is: Linux keyring, gnome-keyring, Secret Service, and D-Bus",
-	howpublished	= "online",
-	year 			= "2019",
-	month			= "7",
-	day				= "12",
-	url 			= "https://rtfm.co.ua/en/what-is-linux-keyring-gnome-keyring-secret-service-and-d-bus/",
-	publisher		= "RTFM: Linux, DevOps, and system administration",
-	cited 			= "2021-05-02"
 }
 
 @webpage{Dropbox,
@@ -134,6 +70,94 @@
 	cited 			= "2021-04-21"
 }
 
+@article{GNULinux,
+	author 	= "Yalta, A. Talha and Lucchetti, Riccardo",
+	title 	= "The GNU/Linux platform and freedom respecting software for economists",
+	journal = "Journal of Applied Econometrics",
+	pages 	= "279-286",
+	doi 	= "https://doi.org/10.1002/jae.990",
+	url 	= "https://onlinelibrary.wiley.com/doi/abs/10.1002/jae.990",
+	year 	= "2008"
+}
+
+@webpage{GNULinux2,	
+	author			= "Stallman, Richard",	
+	title 			= "Linux a systém GNU",
+	howpublished	= "online",
+	year 			= "2020",
+	month			= "07",
+	url 			= "https://www.gnu.org/gnu/linux-and-gnu.cs.html",
+	publisher		= "gnu.org",
+	cited 			= "2021-05-03"
+}
+
+@webpage{FreeSoftware,	
+	key 			= "CoJeToSvobodnySoftware",		
+	title 			= "Co je to svobodný software?",
+	howpublished	= "online",
+	year 			= "2019",
+	month			= "10",
+	url 			= "https://www.gnu.org/philosophy/free-sw.html",
+	publisher		= "gnu.org",
+	cited 			= "2021-05-03"
+}
+
+@webpage{CReference,			
+	key 			= "HistoryOfC",	
+	title 			= "History of C",
+	howpublished	= "online",
+	year 			= "2021",
+	month			= "03",
+	url 			= "https://en.cppreference.com/w/c/language/history",
+	publisher		= "cppreference.com",
+	cited 			= "2021-05-04"
+}
+
+@webpage{CPPReference,
+	key 			= "HistoryOfC++",
+	title 			= "History of C++",
+	howpublished	= "online",
+	year 			= "2021",
+	month			= "03",
+	url 			= "https://en.cppreference.com/w/cpp/language/history",
+	publisher		= "cppreference.com",
+	cited 			= "2021-05-04"
+}
+
+@webpage{OpenAPI,		
+	key				= "OpenAPISpecification",
+	title 			= "OpenAPI Specification",
+	howpublished	= "online",
+	year 			= "2021",	
+	url 			= "https://swagger.io/specification/",
+	publisher		= "SmartBear Software",
+	cited 			= "2021-05-05"
+}
+
+@MISC{RFC7231,
+  	author 		= "Fielding, Roy and Reschke, Julian",
+  	title 		= "Hypertext Transfer Protocol (HTTP/1.1): Semantics and Content",
+  	howpublished= "Requests for Comments",  
+  	year 		= "2014",
+  	month		= "6",  
+  	doi 		= "10.17487/RFC7231",
+  	publisher 	= "RFC Editor",  
+  	url 		= "https://www.rfc-editor.org/info/rfc7231",
+  	cited 		= "2021-04-25"
+}
+
+@inproceedings{HTTP3,
+	author 		= "Carlucci, Gaetano and De Cicco, Luca and Mascolo, Saverio",
+	booktitle 	= "Proceedings of the 30th Annual ACM Symposium on Applied Computing",
+	title 		= "HTTP over UDP: An Experimental Investigation of QUIC",
+	year 		= "2015",
+	isbn 		= "9781450331968",
+	publisher 	= "Association for Computing Machinery",	
+	url 		= "https://doi.org/10.1145/2695664.2695706",
+	doi 		= "10.1145/2695664.2695706",	
+	pages 		= "609–614"
+}
+
 @webpage{MockServer,	
 	author			= "Bloom, James",
 	title 			= "MockServer",
@@ -142,4 +166,44 @@
 	url 			= "https://www.mock-server.com/#what-is-mockserver",
 	publisher		= "Mock Server",
 	cited 			= "2021-04-28"
+}
+
+@inproceedings{FuseOrNotToFuse,
+	author		= "Vangoor, Bharath Kumar Reddy and Tarasov, Vasily and Zadok, Erez",
+	booktitle	= "15th USENIX Conference on File and Storage Technologies (FAST 17)", 
+	title		= "To FUSE or Not to FUSE: Performance of User-Space File Systems", 
+	year		= "2017",
+	pages		= "59-72",
+	url 		= "https://www.usenix.org/conference/fast17/technical-sessions/presentation/vangoor"
+}
+
+@inproceedings{HardeningFUSE,
+	author		= "Burihabwa, Dorian and Felber, Pascal and Mercier, Hugues and Schiavoni, Valerio",
+	booktitle	= "2018 IEEE International Conference on Cloud Computing Technology and Science (CloudCom)", 
+	title		= "SGX-FS: Hardening a File System in User-Space with Intel SGX", 
+	year		= "2018",
+	pages		= "67-72",
+	url 		= "https://ieeexplore.ieee.org/document/8590996"
+}
+
+@webpage{xdg,
+	key 			= "xdg",
+	title 			= "xdg-utils",
+	howpublished	= "online",
+	year 			= "2019",
+	url 			= "https://freedesktop.org/wiki/Software/xdg-utils/",
+	publisher		= "freedesktop.org",
+	cited 			= "2021-04-20"
+}
+
+@webpage{Keyring,
+	key 			= "keyring",
+	title 			= "What is: Linux keyring, gnome-keyring, Secret Service, and D-Bus",
+	howpublished	= "online",
+	year 			= "2019",
+	month			= "7",
+	day				= "12",
+	url 			= "https://rtfm.co.ua/en/what-is-linux-keyring-gnome-keyring-secret-service-and-d-bus/",
+	publisher		= "RTFM: Linux, DevOps, and system administration",
+	cited 			= "2021-05-02"
 }
